SERVER-51749 Remove some sanity checks (like ErrorCodes::OplogStartMissing) for tenant oplog fetcher.